Implemented the AutoClosable interface, simplified the printException method and refactored a call to deprecated API.